--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "# 20 React: React Portfolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "set HTTPS=true&&react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -15,9 +18,27 @@
   "bugs": {
     "url": "https://github.com/sely1724/sylvias-portfolio/issues"
   },
+  
   "homepage": "https://github.com/sely1724/sylvias-portfolio#readme",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
-  }
+  },
+
+
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]}
+
+
 }
